# chat-with-youtube-playlist

./: .gitignore  00-master-architecture.md  01-transcript-extractor.md  02-preprocessor.md  03-chunker.md  04-embedder.md  05-vector-store.md  06-retrieval-generation.md  07-chainlit-app.md  08-audio-transcriber.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: chunker.md  vector-store-evaluation.md
scripts/: extract_text.py
src/ingestion/: audio_transcriber.md  audio_transcriber.py  chunker.md  chunker.py  embeddings.py  playlist_processor.md  playlist_processor.py  preprocessor.py  vector_store.md  vector_store.py  youtube_extractor.py
