[project]
name = "chat-with-youtube-playlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepmultilingualpunctuation>=1.0.1",
    "flagembedding>=1.3.5",
    "google-genai>=1.55.0",
    "langdetect>=1.0.9",
    "regex>=2025.11.3",
    "yt-dlp>=2025.12.8",
]
